# craic

./: CLAUDE.md  carto_slam.sh  demo.sh  demo_carto.sh  gmapping.sh  laser_detect.py  migrate_ws.sh  run_with_demo_log.sh  save.txt  test_point.sh
.claude/: settings.local.json
devel/: .catkin  .rosinstall  local_setup.sh
devel/include/nav_command/: NavCmd.h
devel/include/robot_slam/: NavCmd.h
devel/lib/abot_bringup/: abot_driver
devel/lib/abot_imu/: abot_imu
devel/lib/find_object_2d/: find_object_2d  tf_example
devel/lib/pkgconfig/: TTS_audio.pc  abot_bringup.pc  abot_imu.pc  abot_model.pc  abot_rpp.pc  abot_vlm.pc  find_object_2d.pc  lidar_filters.pc  nav_command.pc  ocr_detect.pc  robot_slam.pc  track_tag.pc
devel/lib/robot_slam/: navigate_node
log/: log.txt
log/archive/: log_20260608_041832.txt  parking_timeline_20260608_035151.html
logs/demo_carto/ros/: latest
src/TTS_audio/scripts/: TTS.py
src/abot_find/launch/: find_object_2d.launch
src/abot_rpp/: CMakeLists.txt  package.xml  rpp_controller_plugin.xml
src/abot_rpp/include/abot_rpp/: rpp_controller.h  rpp_math.h
src/abot_rpp/src/: rpp_controller.cpp
src/abot_vlm/scripts/: API_KEY.py  calculate.py  identify_service.py
src/ocr_detect/launch/: ocr.launch
src/ocr_detect/scripts/: extract.py  ocr.py  ocr_detect.py
src/robot_slam/: CMakeLists.txt  package.xml
src/robot_slam/launch/: auto_single_point_test.launch  board_localizer.launch  carto_localization.launch  carto_slam.launch  multi_goal.launch  multi_goal1.launch  navigation.launch  test_point.launch  view_nav.launch
src/robot_slam/maps/: my_lab.pgm  my_lab.yaml
src/robot_slam/params/: board_localizer.yaml  carto_localization.lua  carto_slam.lua  ekf_laser_imu.yaml  ekf_wheel_imu.yaml
src/robot_slam/rviz/: view_carto.rviz  view_navigation.rviz
src/robot_slam/scripts/: auto_parking_pd.py  auto_parking_pd_plan.md  auto_single_point_test copy.py  auto_single_point_test.py  auto_single_point_test1.py  board_localizer.py  board_localizer_core.py  detect.py  (+11 more)
tools/: parking_log_visualizer.py
(+62 files in other folders)
