<?xml version="1.0"?>
<package format="2">
  <name>abot_rpp</name>
  <version>0.0.0</version>
  <description>RPP (Regulated Pure Pursuit) local planner for abot</description>
  <maintainer email="abot@robot.com">abot</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>base_local_planner</depend>
  <depend>costmap_2d</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_core</depend>
  <depend>nav_msgs</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>visualization_msgs</depend>
  <depend>glog</depend>

  <export>
    <nav_core plugin="${prefix}/rpp_controller_plugin.xml" />
  </export>
</package>
